Fix SonarLint issues flagged in IntelliJ (#51)
* Fix Sonar problems
* Fix dependency convergence errors with archaius-core and servo-core

Closes #50